syntax = "proto3";

package hotelservice;

service HotelService {
    rpc GetRoomByUser (UserProtobuf) returns (RoomProtobuf) {}
}

message UserProtobuf {
    string userId = 1;
    string hotelId = 2;
}

message RoomProtobuf {
    string roomId = 1;
    string roomTypeId = 2;
}